[tool.poetry]
name = "dagster-user-code-example"
version = "0.4.0"
description = ""
authors = ["Alvaro Santos Andres <alvsanand@gmail.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.9.5"
dagster = "1.8.7"
dagster-gcp= "0.24.7"
dagster-celery-k8s = "0.24.7"
dagster-celery = "0.24.7"
dagster-dbt = "0.24.7"
dagster-embedded-elt = "0.24.7"
dagster-graphql = "1.8.7"
dagster-k8s = "0.24.7"
dagster-postgres = "0.24.7"
dagster-pyspark = "0.24.7"
dagster-spark = "0.24.7"
dagster-ssh = "0.24.7"
redis = ">=4.5.2"


[tool.poetry.group.dev.dependencies]
dagster-webserver = "1.8.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
